added remaining projects

--- a/index.html
+++ b/index.html
@@ -112,85 +112,109 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <!-- bootstrap icon -->
-                                <i class="fab fa-bootstrap"></i>
+                                <a href="https://getbootstrap.com/" target="_blank">
+                                    <!-- bootstrap icon -->
+                                    <i class="fab fa-bootstrap"></i>
+                                </a>
                                 <figcaption>Bootstrap</figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <!-- css icon -->
-                                <i class="fab fa-css3-alt"></i>
+                                <a href="" target="_blank">
+                                    <!-- css icon -->
+                                    <i class="fab fa-css3-alt"></i>
+                                </a>
                                 <figcaption>CSS</figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <!-- html icon -->
-                                <i class="fab fa-html5"></i>
+                                <a href="" target="_blank">
+                                    <!-- html icon -->
+                                    <i class="fab fa-html5"></i>
+                                </a>
                                 <figcaption>HTML</figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <!-- python icon -->
-                                <i class="fab fa-python"></i>
+                                <a href="https://www.python.org/" target="_blank">
+                                    <!-- python icon -->
+                                    <i class="fab fa-python"></i>
+                                </a>
                                 <figcaption>Python</figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <!-- javascript icon -->
-                                <i class="fab fa-js-square"></i>
+                                <a href="https://www.javascript.com/" target="_blank">
+                                    <!-- javascript icon -->
+                                    <i class="fab fa-js-square"></i>
+                                </a>
                                 <figcaption>JavaScript</figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <!-- nodejs icon-->
-                                <i class="fab fa-node-js"></i>
+                                <a href="https://nodejs.org/en/" target="_blank">
+                                    <!-- nodejs icon-->
+                                    <i class="fab fa-node-js"></i>
+                                </a>
                                 <Figcaption>nodeJS</Figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <!-- npm icon-->
-                                <i class="fab fa-npm"></i>
+                                <a href="https://www.npmjs.com/" target="_blank">
+                                    <!-- npm icon-->
+                                    <i class="fab fa-npm"></i>
+                                </a>
                                 <figcaption>npm</figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <!-- dup icon -->
-                                <i class="fab fa-html5"></i>
+                                <a href="https://html.com/" target="_blank">
+                                    <!-- dup icon -->
+                                    <i class="fab fa-html5"></i>
+                                </a>
                                 <figcaption>HTML</figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <!-- dup icon -->
-                                <i class="fab fa-python"></i>
+                                <a href="https://www.python.org/" target="_blank">
+                                    <!-- dup icon -->
+                                    <i class="fab fa-python"></i>
+                                </a>
                                 <figcaption>Python</figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <!-- dup icon -->
-                                <i class="fab fa-js-square"></i>
+                                <a href="https://www.javascript.com/" target="_blank">
+                                    <!-- dup icon -->
+                                    <i class="fab fa-js-square"></i>
+                                </a>
                                 <figcaption>JavaScript</figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <!-- dup icon-->
-                                <i class="fab fa-node-js"></i>
+                                <a href="https://nodejs.org/en/" target="_blank">
+                                    <!-- dup icon-->
+                                    <i class="fab fa-node-js"></i>
+                                </a>
                                 <Figcaption>nodeJS</Figcaption>
                             </figure>
                         </div>
                         <div class="col-lg-3 col-md-4 col-6">
                             <figure>
-                                <!-- dup icon-->
-                                <i class="fab fa-npm"></i>
+                                <a href="https://www.npmjs.com/" target="_blank">
+                                    <!-- dup icon-->
+                                    <i class="fab fa-npm"></i>
+                                </a>
                                 <figcaption>npm</figcaption>
                             </figure>
                         </div>
@@ -252,14 +276,14 @@
                 <hr>
                 <div class="card-body">
                     <!-- row 1 featured -->
-                    <h4>Featured Projects</h4>
+                    <h4>Featured</h4>
                     <hr>
                     <div class="row" id="projectRow1">
                         <!-- TollTally App -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
                                 <a href="https://mr-stan.github.io/Project1/" target="_blank">
-                                    <img class="figure-img img-fluid rounded" src="assets/images/tolltally.PNG"
+                                    <img class="figure-img img-fluid rounded projectImage" src="assets/images/tolltally.PNG"
                                         alt="TollTally Web Application Screenshot">
                                 </a>
                             </figure>
@@ -271,8 +295,8 @@
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
                                 <a href="https://mr-stan.github.io/unit-4-game/" target="_blank">
-                                    <img class="figure-img img-fluid rounded" src="assets/images/starwars.PNG"
-                                        alt="Starwars RPG screenshot">
+                                    <img class="figure-img img-fluid rounded projectImage" src="assets/images/starwars.PNG"
+                                        alt="Starwars RPG Screenshot">
                                 </a>
                             </figure>
                             <a href="https://github.com/MR-Stan/unit-4-game" target="_blank">
@@ -283,7 +307,7 @@
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
                                 <a href="https://mr-stan.github.io/Train-Scheduler/" target="_blank">
-                                    <img class="figure-img img-fluid rounded" src="assets/images/train.PNG" alt="text">
+                                    <img class="figure-img img-fluid rounded projectImage" src="assets/images/train.PNG" alt="Train Scheduler Web Application Screenshot">
                                 </a>
                             </figure>
                             <a href="https://github.com/MR-Stan/Train-Scheduler" target="_blank">
@@ -293,73 +317,75 @@
                     </div>
                     <br>
                     <!-- row 2 projects -->
-                    <h4>Projects</h4>
+                    <h4>Others</h4>
                     <hr>
                     <div class="row" id="projectRow2">
+                        <!-- -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <a href="" target="_blank">
-                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                <a href="https://mr-stan.github.io/GifTastic/" target="_blank">
+                                    <img class="figure-img img-fluid rounded projectImage" src="assets/images/gifTastic.PNG" alt="GifTastic Web Application Screenshot">
                                 </a>
                             </figure>
-                            <a href="" target="_blank">
-                                <h5 class="projectLabel">Vine-Yo</h5>
+                            <a href="https://github.com/MR-Stan/GifTastic" target="_blank">
+                                <h5 class="projectLabel">GifTastic</h5>
                             </a>
                         </div>
+                        <!-- -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
-                                <a href="" target="_blank">
-                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                <a href="https://mr-stan.github.io/TriviaGame/" target="_blank">
+                                    <img class="figure-img img-fluid rounded projectImage" src="assets/images/trivia.PNG" alt="Random Trivia Game Web Application Screenshot">
                                 </a>
                             </figure>
-                            <a href="" target="_blank">
-                                <h5 class="projectLabel">Trail Finder</h5>
+                            <a href="https://github.com/MR-Stan/TriviaGame" target="_blank">
+                                <h5 class="projectLabel"> Random Trivia</h5>
                             </a>
-                        </div>
+                        </div>                      
                         <div class="col-xs-12 col-sm-6 col-xl-4">
                             <figure class="figure">
                                 <a href="" target="_blank">
-                                    <img class="figure-img img-fluid rounded" src="" alt="text">
+                                    <img class="figure-img img-fluid rounded projectImage" src="assets/images/comingsoon.jpg" alt="text">
                                 </a>
                             </figure>
                             <a href="" target="_blank">
-                                <h5 class="projectLabel">Vine-Yo</h5>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- row 3 projects -->
-                    <div class="row" id="projectRow3">
-                        <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <figure class="figure">
-                                <a href="" target="_blank">
-                                    <img class="figure-img img-fluid rounded" src="" alt="text">
-                                </a>
-                            </figure>
-                            <a href="" target="_blank">
-                                <h5 class="projectLabel">Name</h5>
-                            </a>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <figure class="figure">
-                                <a href="" target="_blank">
-                                    <img class="figure-img img-fluid rounded" src="" alt="text">
-                                </a>
-                            </figure>
-                            <a href="" target="_blank">
-                                <h5 class="projectLabel">Name</h5>
-                            </a>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <figure class="figure">
-                                <a href="" target="_blank">
-                                    <img class="figure-img img-fluid rounded" src="" alt="text">
-                                </a>
-                            </figure>
-                            <a href="" target="_blank">
-                                <h5 class="projectLabel">Name</h5>
+                                <h5 class="projectLabel">Coming Soon</h5>
                             </a>
                         </div>
                     </div>
+                    <!--
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <figure class="figure">
+                            <a href="" target="_blank">
+                                <img class="figure-img img-fluid rounded projectImage" src="" alt="text">
+                            </a>
+                        </figure>
+                        <a href="" target="_blank">
+                            <h5 class="projectLabel">Name</h5>
+                        </a>
+                    </div>
+                    
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <figure class="figure">
+                            <a href="" target="_blank">
+                                <img class="figure-img img-fluid rounded projectImage" src="" alt="text">
+                            </a>
+                        </figure>
+                        <a href="" target="_blank">
+                            <h5 class="projectLabel">Name</h5>
+                        </a>
+                    </div>
+                    
+                    <div class="col-xs-12 col-sm-6 col-xl-4">
+                        <figure class="figure">
+                            <a href="" target="_blank">
+                                <img class="figure-img img-fluid rounded projectImage" src="" alt="text">
+                            </a>
+                        </figure>
+                        <a href="" target="_blank">
+                            <h5 class="projectLabel">Name</h5>
+                        </a>
+                    </div> -->
                 </div>
             </div>
         </div>
