--- a/index.html
+++ b/index.html
@@ -39,15 +39,14 @@
 </div>
 
 
-<!-- navbar should stick to top of scrolling window -->
-<!-- navbar toggler not working -->
-<nav class="navbar-nav navbar-expand-md navbar-dark bg-dark content">
+<!-- navbar -->
+<nav class="navbar navbar-expand-md navbar-dark navbar-fixed-top bg-dark content">
     <a class="navbar-brand" href="index.html">Mike Stanley</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
-        aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler02"
+        aria-controls="navbarToggler02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarToggler">
+    <div class="collapse navbar-collapse" id="navbarToggler02">
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item">
                 <a class="nav-link" href="#about">About</a>
@@ -80,15 +79,24 @@
                 <hr>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-                            <img class="card-img" src="images/headshot.jpg" alt="My goofy selfie"">
+                        <div class="col-sm-3">
+                            <div id="myPicture">
+                                <img src="assets/images/profilePic.JPG" alt="Profile Pic" class="img-thumbnail">
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="aboutParagraph">
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="card text-white bg-dark mb-2">
+                                <div class="card-body">
+                                    <h5 class="card-title">Current Project</h5>
+                                    <a href="https://github.com/MR-Stan/liri-node-app" target="_blank"
+                                        class="btn btn-primary" id="clickButton">Click To See</a>
                                 </div>
-                                <div class=" col-xs-12 col-sm-6 col-md-8 col-xl-9 col-xl-10">
-                            <p class="card-text">Hey there! Here is some information about me. Wow! Really cool huh?!
-                                Well, I'm glad you liked it because here's some more. I know, I know, really fascinating
-                                stuff. What more can I say? Oh wait, here's a bit more.</p>
-                            <p class="card-text">And... some more information.</p>
-                            <p class="card-text">Finally, here's the last bit of information.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -281,10 +289,10 @@
                     <div class="row" id="projectRow1">
                         <!-- TollTally App -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <figure class="figure">
+                            <figure>
                                 <a href="https://mr-stan.github.io/Project1/" target="_blank">
-                                    <img class="figure-img img-fluid rounded projectImage" src="assets/images/tolltally.PNG"
-                                        alt="TollTally Web Application Screenshot">
+                                    <img class="figure-img img-fluid rounded projectImage"
+                                        src="assets/images/tolltally.PNG" alt="TollTally Web Application Screenshot">
                                 </a>
                             </figure>
                             <a href="https://github.com/MR-Stan/Project1" target="_blank">
@@ -293,10 +301,10 @@
                         </div>
                         <!-- Star Wars RPG -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <figure class="figure">
+                            <figure>
                                 <a href="https://mr-stan.github.io/unit-4-game/" target="_blank">
-                                    <img class="figure-img img-fluid rounded projectImage" src="assets/images/starwars.PNG"
-                                        alt="Starwars RPG Screenshot">
+                                    <img class="figure-img img-fluid rounded projectImage"
+                                        src="assets/images/starwars.PNG" alt="Starwars RPG Screenshot">
                                 </a>
                             </figure>
                             <a href="https://github.com/MR-Stan/unit-4-game" target="_blank">
@@ -305,9 +313,10 @@
                         </div>
                         <!-- Train Scheduler -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <figure class="figure">
+                            <figure>
                                 <a href="https://mr-stan.github.io/Train-Scheduler/" target="_blank">
-                                    <img class="figure-img img-fluid rounded projectImage" src="assets/images/train.PNG" alt="Train Scheduler Web Application Screenshot">
+                                    <img class="figure-img img-fluid rounded projectImage" src="assets/images/train.PNG"
+                                        alt="Train Scheduler Web Application Screenshot">
                                 </a>
                             </figure>
                             <a href="https://github.com/MR-Stan/Train-Scheduler" target="_blank">
@@ -322,9 +331,10 @@
                     <div class="row" id="projectRow2">
                         <!-- -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <figure class="figure">
+                            <figure>
                                 <a href="https://mr-stan.github.io/GifTastic/" target="_blank">
-                                    <img class="figure-img img-fluid rounded projectImage" src="assets/images/gifTastic.PNG" alt="GifTastic Web Application Screenshot">
+                                    <img class="figure-img img-fluid rounded projectImage"
+                                        src="assets/images/gifTastic.PNG" alt="GifTastic Web Application Screenshot">
                                 </a>
                             </figure>
                             <a href="https://github.com/MR-Stan/GifTastic" target="_blank">
@@ -333,19 +343,22 @@
                         </div>
                         <!-- -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <figure class="figure">
+                            <figure>
                                 <a href="https://mr-stan.github.io/TriviaGame/" target="_blank">
-                                    <img class="figure-img img-fluid rounded projectImage" src="assets/images/trivia.PNG" alt="Random Trivia Game Web Application Screenshot">
+                                    <img class="figure-img img-fluid rounded projectImage"
+                                        src="assets/images/trivia.PNG"
+                                        alt="Random Trivia Game Web Application Screenshot">
                                 </a>
                             </figure>
                             <a href="https://github.com/MR-Stan/TriviaGame" target="_blank">
                                 <h5 class="projectLabel"> Random Trivia</h5>
                             </a>
-                        </div>                      
+                        </div>
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <figure class="figure">
+                            <figure>
                                 <a href="" target="_blank">
-                                    <img class="figure-img img-fluid rounded projectImage" src="assets/images/comingsoon.jpg" alt="text">
+                                    <img class="figure-img img-fluid rounded projectImage"
+                                        src="assets/images/comingsoon.jpg" alt="text">
                                 </a>
                             </figure>
                             <a href="" target="_blank">
@@ -355,7 +368,7 @@
                     </div>
                     <!--
                     <div class="col-xs-12 col-sm-6 col-xl-4">
-                        <figure class="figure">
+                        <figure>
                             <a href="" target="_blank">
                                 <img class="figure-img img-fluid rounded projectImage" src="" alt="text">
                             </a>
@@ -366,7 +379,7 @@
                     </div>
                     
                     <div class="col-xs-12 col-sm-6 col-xl-4">
-                        <figure class="figure">
+                        <figure>
                             <a href="" target="_blank">
                                 <img class="figure-img img-fluid rounded projectImage" src="" alt="text">
                             </a>
@@ -377,7 +390,7 @@
                     </div>
                     
                     <div class="col-xs-12 col-sm-6 col-xl-4">
-                        <figure class="figure">
+                        <figure>
                             <a href="" target="_blank">
                                 <img class="figure-img img-fluid rounded projectImage" src="" alt="text">
                             </a>
@@ -426,31 +439,24 @@
                             </a>
                         </div>
                     </div>
-                    <div class="row" id="email">
-                        <!-- email modal button -->
-                        <div id="sendEmail">
-                            <!-- email icon -->
-                            <!-- when this is clicked, using jquery, show the form below and submit send me an email -->
-                            <i class="far fa-envelope"></i>
-                        </div>
-                    </div>
-                    <!-- this form should be a modal controlled by envelope icon -->
-                    <div class="card-body" id="emailForm">
+                    <hr>
+                    <!-- form to send message to firebase -->
+                    <div class="card-body">
                         <form>
                             <div class="form-group">
                                 <label for="Name">Name:</label>
-                                <input type="name" class="form-control" id="Name" placeholder="Name">
+                                <input type="name" class="form-control" id="Name" placeholder="Jason Bourne">
                             </div>
                             <div class="form-group">
                                 <label for="Email1">Email:</label>
-                                <input type="email" class="form-control" id="Email" placeholder="Email">
+                                <input type="email" class="form-control" id="Email" placeholder="jbo@cia.gov">
                             </div>
                             <div class="form-group">
                                 <label for=" Email1msg">Message:</label>
-                                <textarea name="message" class="form-control" placeholder="Leave a message"
-                                    required></textarea>
+                                <textarea name="message" class="form-control"
+                                    placeholder="What a man can't remember doesn't exist for him." required></textarea>
                             </div>
-                            <button type="submit" class="btn btn-info" id="submitEmailButton">Submit</button>
+                            <button type="submit" class="btn btn-info" id="submitMessageButton">Submit</button>
                         </form>
                     </div>
                 </div>
@@ -463,7 +469,7 @@
 <!-- footer should stick to bottom of page -->
 <footer class="page-footer content">
     <div class="container text-center">
-        <small>&copy; 2019 Copyright: Mike Stanley</small>
+        <small>&copy; 2019 Mike Stanley</small>
     </div>
 </footer>
 
@@ -477,6 +483,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
+<!-- local javascript -->
 <script src="assets/javascript/app.js"></script>
 </body>
 
